fixed overflow

--- a/mint/index.sass
+++ b/mint/index.sass
@@ -20,11 +20,11 @@
     opacity: 1
 
 .page
-  overflow-x: hidden
   margin-bottom: 300px
   z-index: 1000
   @media (max-width: 700px)
     margin-bottom: 0
+    overflow-x: hidden
   &-background
     z-index: -100
     top: 75%
@@ -59,7 +59,7 @@
 .mint-interlude
   margin-top: 80px
   margin-bottom: 180px
-  overflow-y: hidden
+  // overflow-y: hidden
 
 .mint-line
   background-color: #FDBF1C
@@ -89,10 +89,10 @@
   em
     color: #FD84E3
     font-feature-settings: 'liga' off
-    font-size: 56px
+    font-size: 72px
     font-style: normal
     font-weight: 900
-    line-height: normal
+    line-height: 50px
     letter-spacing: 1.12px
     @media (max-width: 700px)
       font-size: 40px
